--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -44,17 +44,12 @@ for i in SRS_dict.keys():
 						 i + '/' + SRS_dict[i]['ref'] + 
 						 '/' + SRS_dict[i]['workflow'])
 	
-if config['make_10x_style_mtx']:
-	include: "rules/convert_mtx.smk"
-	rule all:
-		input:
-			[l + '/matrix.ec' for l in adata_bulk_outputs],
-			[l + '/filtered_gene_bc_matrices/matrix.mtx' for l in adata_umi_outputs],
-			[l + '/raw_gene_bc_matrices/matrix.mtx' for l in adata_umi_outputs]
-else:
-	rule all:
-		input:
-			[l + '/matrix.ec' for l in adata_bulk_outputs],
-			[l + '/counts_unfiltered/cells_x_genes.mtx' for l in adata_bulk_outputs]
+rule all:
+	input:
+		[l + '/matrix.ec' for l in adata_bulk_outputs],
+		[l + '/raw_gene_bc_matrices/matrix.mtx' for l in adata_umi_outputs],
+		[l + '/counts_unfiltered/cellbender_filtered.h5ad' for l in adata_umi_outputs]
 
 include: "rules/kb.smk"
+include: "rules/convert_mtx.smk"
+include: "rules/cellbender.smk"
